# llambda

./: .gitignore  LICENSE  README.md  TECHNICAL_DEBT.md  accelerator.lisp  architecture.lisp  chatbot-backend-tests.lisp  chatbot-backend.lisp  llambda.asd  llambda.lisp  notes.txt  package.lisp  tests.lisp
.github/: copilot-instructions.md
accelerators/: directml.lisp  vitisai.lisp
architectures/: gemma4.lisp  llama.lisp  nemotron-h-moe.lisp  qwen2.lisp  qwen3next.lisp
native/: CMakeLists.txt  build-npu.ps1  generate-matmul-model.py  llambda_npu.cpp  llambda_npu.h  llambda_npu_smoke.cpp
